--- a/packages/cli/tsconfig.json
+++ b/packages/cli/tsconfig.json
@@ -1,12 +1,12 @@
 {
   "compilerOptions": {
     "declaration": true,
-    "module": "esnext",
+    "module": "Node16",
     "outDir": "dist",
     "rootDir": "src",
     "strict": true,
-    "target": "es2022",
-    "moduleResolution": "node",
+    "target": "ES2022",
+    "moduleResolution": "Node16",
   },
   "include": ["./src/**/*"]
 }
