--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -30,11 +30,11 @@ jobs:
       - run: echo "//registry.npmjs.org/:_authToken=${{ secrets.NPM_TOKEN }}" > ~/.npmrc
 
       - name: Publish core 🚀
-        run: yarn workspace @excalidraw-to-mermaid/core publish
+        run: yarn workspace @excalidraw-to-mermaid/core publish --access public
         env:
           NODE_AUTH_TOKEN: ${{ secrets.NPM_TOKEN }}
 
       - name: Publish CLI 🚀
-        run: yarn workspace @excalidraw-to-mermaid/cli publish
+        run: yarn workspace @excalidraw-to-mermaid/cli publish --access public
         env:
           NODE_AUTH_TOKEN: ${{ secrets.NPM_TOKEN }}
